--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -17,6 +17,7 @@ RUN env | sort
 
 # Project specific deps
 RUN apt-get update && apt-get install -y --no-install-recommends \
+  pkg-config \
   gettext \
   libpcre3 \
   libpq5 \
