rdrf #2470 added libcairo2-dev

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -18,6 +18,7 @@ RUN env | sort
 # Project specific deps
 RUN apt-get update && apt-get install -y --no-install-recommends \
   pkg-config \
+  libcairo2-dev \
   gettext \
   libpcre3 \
   libpq5 \
